--- a/seyren-web/src/main/webapp/index.html
+++ b/seyren-web/src/main/webapp/index.html
@@ -41,7 +41,8 @@
         </div>
     </footer>
 
-    <script src="./js/lib/jquery-1.7.2.min.js" type="text/javascript"></script>
+    <script src="./js/lib/jquery-1.12.4.min.js" type="text/javascript"></script>
+    <script src="./js/lib/jquery-migrate-1.4.1.min.js" type="text/javascript"></script>
     <script src="./js/lib/angular-1.2.3.min.js" type="text/javascript"></script>
     <script src="./js/lib/angular-resource-1.2.3.min.js" type="text/javascript" ng-autobind></script>
     <script src="./js/lib/angular-route-1.2.3.min.js" type="text/javascript" ng-autobind></script>
